# bgenR

./: .README.md.un~  DESCRIPTION  NAMESPACE  README.md  README.md~  cleanup  configure  configure.ac
R/: read_bgen.R
inst/extdata/: bgen11_uncompressed.bgen  bgen11_zlib.bgen  bgen12_uncompressed.bgen  bgen12_zlib.bgen  bgen12_zstd.bgen  v1000.rds
man/: .get_variantBlock.Rd.un~  bgenR-package.Rd  close_bgen.Rd  get_variantBlock.Rd  get_variantBlock.Rd~  get_vblock.Rd  open_bgen.Rd  query_bgen.Rd  read_bgen.Rd  variant_block.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExport.cpp  read_bgen.cpp  read_bgen.h
src/libdeflate-1.6/lib/: gzip_compress.c
tests/: testthat.R
tests/testthat/: test-bgen11.R  test-bgen13.R
